--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<body>
-<center>
-<h1>Hello World</h1>
-</center>
-</body>
-</html> 
+  <head>
+    <title> Pizza! </title>
+  </head>
+    <body>
+        <center> <h1 style="color:red"> COMBO WOMBO PIZZA WITH A BONGO!! </h1>
+            <img src="pizza.jpg" alt="Combo Pizza" width="500" height="300"> 
+            <img src="bongos.jpg" alt="Bongos" width="500" height="300"> 
+        </center>
+        
